--- a/05_입력양식 및 폼관련 태그.html
+++ b/05_입력양식 및 폼관련 태그.html
@@ -157,7 +157,7 @@
         <!-- 연도, 월 까지만 입력받을 수 있는 텍스트 상자 -->
 
         week : <input type="week" name="weekIn"> <br>
-        <!-- 연도, 해당년도에 몇 번째 주인이 입력받을 수 있는 텍스트 상자 -->
+        <!-- 연도, 해당년도에 몇 번째 주인지 입력받을 수 있는 텍스트 상자 -->
 
         time : <input type="time" name="timeIn"> <br>
         <!-- 오전 / 오후, 시, 분을 입력받을 수 있는 텍스트 상자 -->
